force-app/main/default/objects/SPEN_PSR__c/SPEN_PSR__c.object-meta.xml
<CustomObject>
    <description>PSR object has been set up to see all the PSR related information</description>
    <label>PSR</label>
    <nameField>
        <displayFormat>PSR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>