force-app/main/default/objects/SPEN_PSR__c/fields/PSR_Letterdates__c.field-meta.xml
<CustomField>
    <fullName>PSR_Letterdates__c</fullName>
    <description>Date that customer letter was triggered</description>
    <label>PSR Letter dates</label>
    <type>Date</type>
</CustomField>