force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalInfo__c</fullName>
    <label>Additional Info</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>