force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_ADQMLastSync__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ADQMLastSync__c</fullName>
    <description>Represents the last time the record is synchronized with ADQM.</description>
    <label>ADQM Last Sync</label>
    <type>DateTime</type>
</CustomField>