force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_Contact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PSRs</relationshipLabel>
    <relationshipName>PSRs</relationshipName>
    <type>Lookup</type>
</CustomField>