force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_ContactNameFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactNameFormula__c</fullName>
    <description>Contact Name from Contact object</description>
    <formula>SPEN_Contact__r.FirstName &amp;&quot; &quot;&amp; SPEN_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>