force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_Current__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Current__c</fullName>
    <description>Confirmation that the PSR is current</description>
    <formula>(SPEN_PSREffectiveToDate__c &gt;= SPEN_PSREffectiveFromDate__c) &amp;&amp; ( SPEN_PSREffectiveToDate__c &gt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current?</label>
    <type>Checkbox</type>
</CustomField>