force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_CustomerTelephoneFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerTelephoneFormula__c</fullName>
    <description>Customer Telephone from Contact object</description>
    <formula>SPEN_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Telephone</label>
    <type>Text</type>
</CustomField>