force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_DistrictFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DistrictFormula__c</fullName>
    <description>District from Premise object</description>
    <formula>SPEN_Premise__r.SPEN_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>