force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_FirstLanguage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FirstLanguage__c</fullName>
    <description>For code 17 this field will be selected</description>
    <label>First Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALBANIAN</fullName>
            </value>
            <value>
                <fullName>AMHARIC</fullName>
            </value>
            <value>
                <fullName>ARABIC</fullName>
            </value>
            <value>
                <fullName>BENGALI</fullName>
            </value>
            <value>
                <fullName>BULGARIAN</fullName>
            </value>
            <value>
                <fullName>CANTONESE</fullName>
            </value>
            <value>
                <fullName>CHINESE</fullName>
            </value>
            <value>
                <fullName>CROATIAN</fullName>
            </value>
            <value>
                <fullName>CZECH</fullName>
            </value>
            <value>
                <fullName>DANISH</fullName>
            </value>
            <value>
                <fullName>DUTCH</fullName>
            </value>
            <value>
                <fullName>ESTONIAN</fullName>
            </value>
            <value>
                <fullName>FINNISH</fullName>
            </value>
            <value>
                <fullName>FRENCH</fullName>
            </value>
            <value>
                <fullName>GERMAN</fullName>
            </value>
            <value>
                <fullName>GREEK</fullName>
            </value>
            <value>
                <fullName>HINDI</fullName>
            </value>
            <value>
                <fullName>HUNGARIAN</fullName>
            </value>
            <value>
                <fullName>INDONESIAN</fullName>
            </value>
            <value>
                <fullName>ITALIAN</fullName>
            </value>
            <value>
                <fullName>JAPANESE</fullName>
            </value>
            <value>
                <fullName>KOREAN</fullName>
            </value>
            <value>
                <fullName>KURDISH</fullName>
            </value>
            <value>
                <fullName>LATVIAN</fullName>
            </value>
            <value>
                <fullName>LITHUANIAN</fullName>
            </value>
            <value>
                <fullName>LYBIAN</fullName>
            </value>
            <value>
                <fullName>MALTESE</fullName>
            </value>
            <value>
                <fullName>MANDARIN</fullName>
            </value>
            <value>
                <fullName>NEPALI</fullName>
            </value>
            <value>
                <fullName>PASHTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>