force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_IsCustomerHappy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsCustomerHappy__c</fullName>
    <description>Check customer is happy for us to share new/updated PSR details with supplier.</description>
    <label>Is Customer Happy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>