force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_IsPSRDetailsValidated__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsPSRDetailsValidated__c</fullName>
    <description>Check to confirm PSR details have been validated on every call.</description>
    <label>Is PSR Details Validated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>