force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_OtherPartnerCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherPartnerCorrespondence__c</fullName>
    <description>Used to capture the Other Partner and Other Correspondence type</description>
    <label>Other Partner / Other Correspondence</label>
    <type>TextArea</type>
</CustomField>