force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_PreferredMethodofContactFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreferredMethodofContactFormula__c</fullName>
    <description>Preferred Method of Contact from Contact object</description>
    <formula>TEXT(SPEN_Contact__r.SPEN_PreferredMethodofContact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Method of Contact</label>
    <type>Text</type>
</CustomField>