force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_Premise__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>SPEN_Premise__c</referenceTo>
    <relationshipLabel>PSRs</relationshipLabel>
    <relationshipName>PSRs</relationshipName>
    <type>Lookup</type>
</CustomField>