force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_PSREffectiveFromDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PSREffectiveFromDate__c</fullName>
    <description>Date that the PSR category is effective from</description>
    <label>PSR Effective From Date</label>
    <type>Date</type>
</CustomField>