force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_PSREffectiveToDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PSREffectiveToDate__c</fullName>
    <description>Date that the PSR category is effective until</description>
    <label>PSR Effective To Date</label>
    <type>Date</type>
</CustomField>