force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_PSRId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PSRId__c</fullName>
    <externalId>true</externalId>
    <label>SPEN PSR Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>