force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_PSRVulnerabilityType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PSRVulnerabilityType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSR and Vulnerability Type</label>
    <referenceTo>SPEN_PSRVulnerabilityType__c</referenceTo>
    <relationshipLabel>PSRs</relationshipLabel>
    <relationshipName>PSRs</relationshipName>
    <type>Lookup</type>
</CustomField>