force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_SendVoiceAlert__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVoiceAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Voice Alert</label>
    <type>Checkbox</type>
</CustomField>