force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_SocialObligationsSource__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SocialObligationsSource__c</fullName>
    <description>Use to track Social Obligations Source</description>
    <label>Social Obligations Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPEN_SourceofPSRUpdate__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leaflet</fullName>
            </value>
            <value>
                <fullName>Network Natter</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>WWU</fullName>
            </value>
            <value>
                <fullName>SGN</fullName>
            </value>
            <value>
                <fullName>HES</fullName>
            </value>
            <value>
                <fullName>Other Partner</fullName>
            </value>
            <value>
                <fullName>Email/online form/tweet</fullName>
            </value>
            <value>
                <fullName>Other leaflet/correspondence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>