force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_SourceofPSRUpdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SourceofPSRUpdate__c</fullName>
    <description>Use to track source of PSR update</description>
    <label>Source of PSR Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Social Obligations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>