force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_SpecificVulnerability__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecificVulnerability__c</fullName>
    <formula>If(AND(NOT(SPEN_PSREffectiveToDate__c  &lt;  TODAY()),NOT(ISBLANK(SPEN_PSREffectiveToDate__c  )), SPEN_PSRVulnerabilityType__r.SPEN_SpecificVulnerability__c) , true, if(AND(ISBLANK(SPEN_PSREffectiveToDate__c  ), SPEN_PSRVulnerabilityType__r.SPEN_SpecificVulnerability__c),true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specific Vulnerability</label>
    <type>Checkbox</type>
</CustomField>