force-app/main/default/objects/SPEN_PSR__c/fields/SPEN_ZoneFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ZoneFormula__c</fullName>
    <description>Zone value from Premise object</description>
    <formula>SPEN_Premise__r.SPEN_Zone__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>