force-app/main/default/objects/SPEN_PSR__c/recordTypes/SPEN_PSR.recordType-meta.xml
<RecordType>
    <fullName>SPEN_PSR</fullName>
    <active>true</active>
    <label>SPEN PSR</label>
</RecordType>