force-app/main/default/objects/SPEN_PSR__c/validationRules/SPEN_FirstLanguageSelection.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_FirstLanguageSelection</fullName>
    <active>true</active>
    <description>When code 17 selected in PSR Screen then First Language field should be editable.</description>
    <errorConditionFormula>IF(  NOT($Permission.SPEN_BypassVrPSR) &amp;&amp;
!IsNull( SPEN_PSRVulnerabilityType__r.Name ) &amp;&amp; 
CONTAINS(  SPEN_PSRVulnerabilityType__r.Name  ,&apos;17-Unable to communicate in English&apos;) &amp;&amp; ISPICKVAL(SPEN_FirstLanguage__c, &quot;&quot;), true, false)    ||   IF( 
!IsNull( SPEN_PSRVulnerabilityType__r.Name ) &amp;&amp; 
!CONTAINS(  SPEN_PSRVulnerabilityType__r.Name  ,&apos;17-Unable to communicate in English&apos;) &amp;&amp;  !ISPICKVAL( SPEN_FirstLanguage__c ,&quot;&quot;), true, false)</errorConditionFormula>
    <errorMessage>Please Select First Language</errorMessage>
</ValidationRule>