force-app/main/default/objects/SPEN_PSR__c/validationRules/SPEN_MandatoryEffectiveToDate.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_MandatoryEffectiveToDate</fullName>
    <active>true</active>
    <description>&apos;Effective to date&apos; field is mandatory for code 29</description>
    <errorConditionFormula>IF(
!IsNull( SPEN_PSRVulnerabilityType__r.Name ) &amp;&amp;
CONTAINS( SPEN_PSRVulnerabilityType__r.Name ,&apos;29-Families with young children 5 or under&apos;) &amp;&amp;  ISBLANK( SPEN_PSREffectiveToDate__c ), true, false)</errorConditionFormula>
    <errorMessage>Please Select PSR Effective To Date</errorMessage>
</ValidationRule>