force-app/main/default/objects/SPEN_PSR__c/validationRules/SPEN_PSRVulnerabilityTypeAgentCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_PSRVulnerabilityTypeAgentCheck</fullName>
    <active>true</active>
    <description>&apos;PSR and Vulnerability Type&apos; field should not be editable by agent.</description>
    <errorConditionFormula>ISCHANGED(  SPEN_PSRVulnerabilityType__c  ) &amp;&amp; $Profile.Name = &quot;SPEN Agent&quot;</errorConditionFormula>
    <errorMessage>Agent can&apos;t modify PSR &amp; Vulnerability Type</errorMessage>
</ValidationRule>